trait-xml/tests/fail/supertrait_inv.rs
trait_xml::trait_xml! {
    <trait>
        <name>Foo</name>
        <bounds>
            <req>!!!</req>
        </bounds>
    </trait>
}

fn main() {}
