trait-xml/tests/fail/supertrait_inv.stderr
error: error parsing supertrait: arguments form invalid path. caller: `::trait_xml::trait_xml_parse_bounds`, args: `!!!`
 --> tests/fail/supertrait_inv.rs:1:1
  |
1 | / trait_xml::trait_xml! {
2 | |     <trait>
3 | |         <name>Foo</name>
4 | |         <bounds>
... |
7 | |     </trait>
8 | | }
  | |_^
  |
  = note: this error originates in the macro `$crate::trait_xml_parse_supertrait` which comes from the expansion of the macro `trait_xml::trait_xml` (in Nightly builds, run with -Z macro-backtrace for more info)
